devsecops in kubernetes/exceeding-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exceeding-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      limits:
        memory: "500Mi"
        cpu: "600m"
